// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Home Page Renders Logged In matches snapshot when logged in 1`] = `
<DocumentFragment>
  <section
    class="col-md-8 Home"
  >
    <div
      class="card"
    >
      <div
        class="card-title"
      >
        <h1>
          A Roller Derby Communication Application
        </h1>
      </div>
      <div
        class="card-body"
      >
        <p
          class="card-text"
        />
        -
        <h2>
          Welcome back, testUser!
        </h2>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Tests Home Page Renders Logged Out matches snapshot when logged out 1`] = `
<DocumentFragment>
  <section
    class="col-md-8 Home"
  >
    <div
      class="card"
    >
      <div
        class="card-title"
      >
        <h1>
          A Roller Derby Communication Application
        </h1>
      </div>
      <div
        class="card-body"
      >
        <p
          class="card-text"
        />
        -
        <p
          class="card-text"
        >
          <a
            class="Home-Link"
            href="/login"
          >
            <button
              class="btn btn-secondary"
            >
              Login
            </button>
          </a>
          <a
            class="Home-Link"
            href="/signup"
          >
            <button
              class="btn btn-secondary"
            >
              Signup
            </button>
          </a>
        </p>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
